# TBO

./: NEXT-STEPS.md  README  meson.build
archlinux/: PKGBUILD
data/applications/: net.danigm.tbo.desktop
debian/: changelog  control  rules
debian/tests/: control
po/: es.po
src/: comic-load.c  comic-load.h  comic-new-dialog.c  comic-open-dialog.c  comic-saveas-dialog.c  comic.c  comic.h  dnd.c  dnd.h  doodle-treeview.c  export.c  export.h  frame.c  frame.h  page.c  page.h  tbo-drawing.c  tbo-drawing.h  tbo-file-dialog.c  tbo-files.c  tbo-files.h  tbo-object-base.c  tbo-object-group.h  tbo-object-pixmap.c  tbo-object-svg.c  tbo-object-text.c  tbo-tool-frame.c  tbo-tool-frame.h  tbo-tool-selector.c  tbo-tool-selector.h  tbo-tool-text.c  tbo-tool-text.h  tbo-toolbar.c  tbo-toolbar.h  tbo-tooltip.c  tbo-tooltip.h  tbo-types.h  tbo-ui-utils.c  tbo-undo.c  tbo-undo.h  (+8 more)
tests/: asset_bounds_check.c  assets_browser_search_check.c  dnd_feedback_check.c  frame_count_status_check.c  frame_view_coordinate_mapping_check.c  invalid_tbo_variants_check.c  keyboard_accessibility_check.c  load_render_check.c  mode_status_check.c  model_current_state_check.c  page_status_check.c  shortcuts_guide_check.c  status_hierarchy_check.c  xml_roundtrip_check.c
